Lab4: Fix compilation errors only in CI #reproducibleBuilds