@@ -10,6 +10,7 @@ import java.io.IOException;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CsvExporter implements ICsvExporter {
     private static final String CSV_HEADER = "OrderId,Product,Quantity,Price\n";
@@ -26,7 +27,7 @@ public class CsvExporter implements ICsvExporter {
             double sum = 0.0;
             for (Order o : orders) {
                 for (OrderItem i : o.getItems()) {
-                    Product p = products.stream().filter((p1) -> i.getProduct().getId() == p1.getId()).toList().get(0);
+                    Product p = products.stream().filter((p1) -> i.getProduct().getId() == p1.getId()).collect(Collectors.toList()).get(0);
                     w.write(o.getId() + "," + p.getNume() + "," + i.getQuantity() + "," + i.getTotal() + "\n");
                 }
                 w.write(ORDER_TOTAL_PREFIX + o.getTotalPrice() + CURRENCY_SUFFIX);
